--- a/css/reset.css
+++ b/css/reset.css
@@ -27,6 +27,7 @@ dd {
 /* Set core root defaults */
 html {
     scroll-behavior: smooth;
+    overflow: hidden;
 }
 
 /* Set core body defaults */
@@ -34,6 +35,7 @@ body {
     min-height: 100vh;
     text-rendering: optimizeSpeed;
     line-height: 1.6;
+    overflow: hidden;
 }
 
 /* Remove list styles */
